[project]
name = "ovarian-can"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "id-f", email = "" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ovarian-can = "ovarian_can:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
